--- a/connect-react/package.json
+++ b/connect-react/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.5.4",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@wojtekmaj/react-daterange-picker": "^3.0.1",
     "ag-grid-community": "^24.1.0",
     "ag-grid-react": "^24.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "d3": "^5.16.0",
+    "formik": "^2.2.6",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "loadash": "^1.0.0",
     "react": "^16.14.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.0",
     "react-modal": "3.11.2",
+    "react-native": "^0.63.4",
+    "react-native-cardview": "^2.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -28,7 +36,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,5 +64,5 @@
     "@google-pay/button-react": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8443"
 }
