--- a/connect-react/package.json
+++ b/connect-react/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.5.3",
     "d3": "^5.16.0",
     "formik": "^2.2.6",
+    "kafkajs": "^1.15.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "loadash": "^1.0.0",
